--- a/app/css/style.css
+++ b/app/css/style.css
@@ -9589,7 +9589,7 @@ a.text-dark:hover, a.text-dark:focus {
   padding: 0px;
   text-align: center;
   font-family: "Open Sans", sans-serif;
-}
+}x
 
 .cotn_principal {
   position: absolute;
